changes to the template directory

--- a/templates/example_fullmap.html
+++ b/templates/example_fullmap.html
@@ -4,11 +4,14 @@
             <meta charset="utf-8">
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <title>Flask Google Maps Full Map Example</title>
-            {{fullmap.js}}
+            {{mymap.js}}
+            {{sndmap.js}}
+
     </head>
     <body>
         <h1>Flask Google Maps Full Map Example</h1>
-        {{fullmap.html}}
+        {{mymap.html}}
+        {{sndmap.html}}
     </body>
 </html>
 
