use te original full map code

--- a/templates/example_fullmap.html
+++ b/templates/example_fullmap.html
@@ -4,14 +4,13 @@
             <meta charset="utf-8">
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <title>Flask Google Maps Full Map Example</title>
-            {{mymap.js}}
-            {{sndmap.js}}
-
+            <link rel="stylesheet" href="">
+            {{fullmap.js}}
     </head>
     <body>
         <h1>Flask Google Maps Full Map Example</h1>
-        {{mymap.html}}
-        {{sndmap.html}}
+        {{ fullmap.html }}
+
     </body>
 </html>
 
